# Project metadata
[tool.poetry]
name = "tableau-datasource-refresher"
version = "0.1"
description = "tableau-datasource-refresher"
authors = ["gibz104"]

# Python dependencies
[tool.poetry.dependencies]
python = "^3.8"

selenium = "^4.8.2"
selenium-stealth = "^1.0.6"
webdriver-manager = "^3.8.5"

coverage = "^7.2.1"
pytest = "^7.2.1"
pytest-benchmark = "^4.0.0"
pytest-sugar = "^0.9.6"
pytest-icdiff = "^0.6"
sphinx = "^6.1.3"
sphinx_rtd_theme = "^1.2.0"
tox = "^4.4.6"

# Build configuration
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tox setup
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,coverage
[testenv]
commands =
    python -m coverage run -p -m pytest
[testenv:coverage]
basepython = python3.10
commands =
    python -m coverage combine
    python -m coverage report -mi --skip-covered
    python -m coverage json -i
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
"""